--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -232,6 +232,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "source": [
     "included_columns = ['IMDB Score', 'overview', 'Genre', 'actors', 'runtime', 'director', 'budget', 'companies']\n",
@@ -460,7 +467,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now we can take train data and transform so we can apply algorithms"
+    "Now we can take this data and do binarization and then we will apply regression algorithms"
    ],
    "metadata": {}
   },
@@ -469,34 +476,34 @@
    "execution_count": null,
    "source": [
     "train_data = pd.read_csv('../data/train.csv')\n",
+    "test_data = pd.read_csv('../data/test.csv')\n",
     "\n",
     "genre_dictionary = create_dictionary(train_data['Genre'].astype(str).values, min_count=5)\n",
     "train_genre_matrix = transform_text(train_data['Genre'].astype(str).values, genre_dictionary)\n",
-    "# valid_genre_matrix = transform_text(valid_data['Genre'].astype(str).values, genre_dictionary)\n",
     "test_genre_matrix = transform_text(test_data['Genre'].astype(str).values, genre_dictionary)\n",
+    "# valid_genre_matrix = transform_text(valid_data['Genre'].astype(str).values, genre_dictionary)\n",
     "\n",
     "director_dictionary = create_dictionary(train_data['director'].astype(str).values, min_count=5)\n",
     "train_director_matrix = transform_text(train_data['director'].astype(str).values, director_dictionary)\n",
-    "# valid_director_matrix = transform_text(valid_data['director'].astype(str).values, director_dictionary)\n",
     "test_director_matrix = transform_text(test_data['director'].astype(str).values, director_dictionary)\n",
+    "# valid_director_matrix = transform_text(valid_data['director'].astype(str).values, director_dictionary)\n",
     "\n",
     "actors_dictionary = create_dictionary(train_data['actors'].astype(str).values, min_count = 5)\n",
     "train_actors_matrix = transform_text(train_data['actors'].astype(str).values, actors_dictionary)\n",
-    "# valid_actors_matrix = transform_text(valid_data['actors'].astype(str).values, actors_dictionary)\n",
     "test_actors_matrix = transform_text(test_data['actors'].astype(str).values, actors_dictionary)\n",
+    "# valid_actors_matrix = transform_text(valid_data['actors'].astype(str).values, actors_dictionary)\n",
     "\n",
     "companies_dictionary = create_dictionary(train_data['companies'].astype(str).values, min_count=5)\n",
     "train_companies_matrix = transform_text(train_data['companies'].astype(str).values, companies_dictionary)\n",
-    "# valid_companies_matrix = transform_text(valid_data['companies'].astype(str).values, companies_dictionary)\n",
     "test_companies_matrix = transform_text(test_data['companies'].astype(str).values, companies_dictionary)\n",
+    "# valid_companies_matrix = transform_text(valid_data['companies'].astype(str).values, companies_dictionary)\n",
     "\n",
     "tokenizer = en_core_web_sm.load(disable=[\"tagger\", \"parser\",\"ner\"])\n",
     "overview_dictionary = create_dictionary(train_data['overview'], min_count = 20, tokenizer=tokenizer)\n",
     "print('Size of dictionary: ', len(overview_dictionary))\n",
     "train_overview_matrix = transform_text(train_data['overview'].astype(str).values, overview_dictionary)\n",
-    "# valid_overview_matrix = transform_text(valid_data['overview'].astype(str).values, overview_dictionary)\n",
     "test_overview_matrix = transform_text(test_data['overview'].astype(str).values, overview_dictionary)\n",
-    "\n"
+    "# valid_overview_matrix = transform_text(valid_data['overview'].astype(str).values, overview_dictionary)"
    ],
    "outputs": [],
    "metadata": {
@@ -537,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "source": [
     "test_data = pd.concat([test_data,   pd.DataFrame(test_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(test_director_matrix, columns=director_dictionary.keys()), \n",
@@ -547,17 +554,6 @@
     "\n",
     "test_data.to_csv('../data/test_final.csv', index = False)\n",
     "# test_data.head()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "source": [
-    "# train_data = pd.read_csv('../data/train_final.csv')\n",
-    "# valid_data = pd.read_csv('../data/valid_final.csv')\n",
-    "# test_data = pd.read_csv('../data/test_final.csv')"
    ],
    "outputs": [],
    "metadata": {}
