--- a/src/regression.ipynb
+++ b/src/regression.ipynb
@@ -807,6 +807,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Plotting errors for different models"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "source": [
