Cleaned code and added more error plots

--- a/src/preprocessing2.ipynb
+++ b/src/preprocessing2.ipynb
@@ -34,8 +34,6 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import os\n",
-    "import spacy\n",
-    "import en_core_web_sm\n",
     "import nltk\n",
     "import string\n",
     "from nltk.corpus import stopwords\n",
@@ -167,7 +165,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# We will extract top 4 actors, top 2 comapanies, and director"
+    "# We will extract top 6 actors, top 2 comapanies, and director"
    ],
    "metadata": {}
   },
@@ -504,13 +502,18 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "We will take 200 most frequent actors (the ones that appear in the most number of films)"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 291,
    "source": [
     "main_actors = [x for x in actors_flat_list]\n",
     "main_actors_dict = dict(Counter(main_actors))\n",
-    "# print(main_actors_dict)\n",
-    "# print(main_actors_dict['Samuel L. Jackson'])\n",
     "main_actors_sorted = sorted(main_actors_dict, key=main_actors_dict.get, reverse=True)\n",
     "main_actors_sorted = main_actors_sorted[:200]"
    ],
@@ -708,6 +711,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Drop films that do not have either of this 200 most frequent actors"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [
@@ -719,83 +729,6 @@
     "# data_to_use.head()"
    ],
    "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Standardization of budget"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "source": [
-    "# x = data_to_use.values\n",
-    "# x = x[:, 6].reshape(-1,1)\n",
-    "# data = pd.DataFrame(x)\n",
-    "# budget_scaled = StandardScaler().fit_transform(data)\n",
-    "# budget_scaled = pd.DataFrame(budget_scaled)\n",
-    "# # print(budget_scaled)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Standardization of runtime"
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "source": [
-    "# y = data_to_use.values\n",
-    "# y = y[:, 4].reshape(-1,1)\n",
-    "# data = pd.DataFrame(y)\n",
-    "# # print(data)\n",
-    "# runtime_scaled = StandardScaler().fit_transform(data)\n",
-    "# runtime_scaled = pd.DataFrame(runtime_scaled)\n",
-    "# # print(runtime_scaled)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# data_to_use['budget_scaled'] = budget_scaled\n",
-    "# data_to_use['runtime_scaled'] = runtime_scaled\n",
-    "# data_to_use.drop('budget', 1, inplace=True)\n",
-    "# data_to_use.drop('runtime', 1, inplace=True)\n",
-    "# data_to_use = data_to_use.dropna()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 298,
-   "source": [
-    "data_to_use.shape\n",
-    "# data_to_use.head()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "(5612, 9)"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 298
-    }
-   ],
    "metadata": {}
   },
   {
@@ -848,7 +781,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Split into train, validation and test set"
+    "Split into train and test set"
    ],
    "metadata": {}
   },
@@ -857,18 +790,14 @@
    "execution_count": 300,
    "source": [
     "train_dataset, test_dataset = train_test_split(data_to_use, test_size=0.3, random_state = 0)\n",
-    "# valid_dataset, test_dataset = train_test_split(test_dataset, test_size=0.5, random_state = 0)\n",
     "\n",
     "train_data = train_dataset.reset_index(drop=True)\n",
-    "# valid_data = valid_dataset.reset_index(drop=True)\n",
     "test_data = test_dataset.reset_index(drop=True)\n",
     "\n",
     "print(train_data.shape)\n",
-    "# print(valid_data.shape)\n",
     "print(test_data.shape)\n",
     "\n",
     "train_data.to_csv('../data/train2.csv', index = False)\n",
-    "# valid_data.to_csv('../data/valid.csv', index = False)\n",
     "test_data.to_csv('../data/test2.csv', index = False)"
    ],
    "outputs": [
@@ -879,154 +808,6 @@
       "(3928, 9)\n",
       "(1684, 9)\n"
      ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 301,
-   "source": [
-    "train_data.head()"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   IMDB Score                                           overview  \\\n",
-       "0         7.6  It's Christmas time and the Griswolds are prep...   \n",
-       "1         5.8  By day, Richard Haig is a successful and well-...   \n",
-       "2         6.5  Hank and Frannie don't seem to be able to live...   \n",
-       "3         5.4  Based on Michael Chabon's novel, the film chro...   \n",
-       "4         5.7  A Texas Ranger investigates a series of unexpl...   \n",
-       "\n",
-       "                    Genre                                             actors  \\\n",
-       "0                  Comedy  Chevy Chase|Beverly D'Angelo|Randy Quaid|Julie...   \n",
-       "1          Comedy|Romance  Jessica Alba|Pierce Brosnan|Malcolm McDowell|S...   \n",
-       "2   Drama|Musical|Romance  Teri Garr|Frederic Forrest|RaÃºl JuliÃ¡|Lainie...   \n",
-       "3  Adventure|Comedy|Drama  Jon Foster|Peter Sarsgaard|Sienna Miller|Nick ...   \n",
-       "4           Drama|Western  Woody Harrelson|Liam Hemsworth|Alice Braga|Emo...   \n",
-       "\n",
-       "   runtime                 director    budget  \\\n",
-       "0     97.0      Jeremiah S. Chechik  27000000   \n",
-       "1     99.0              Tom Vaughan         0   \n",
-       "2    107.0     Francis Ford Coppola         0   \n",
-       "3     95.0  Rawson Marshall Thurber         0   \n",
-       "4    110.0       Kieran Darcy-Smith  10000000   \n",
-       "\n",
-       "                                           companies  \\\n",
-       "0                  Hughes Entertainment|Warner Bros.   \n",
-       "1                          Irish Dreamtime|Das Films   \n",
-       "2                                   Zoetrope Studios   \n",
-       "3  Sherazade Film Development|Groundswell Product...   \n",
-       "4                          26 Films|Mandeville Films   \n",
-       "\n",
-       "                                          top_actors  \n",
-       "0  ['Chevy Chase', \"Beverly D'Angelo\", 'Randy Qua...  \n",
-       "1  ['Jessica Alba', 'Pierce Brosnan', 'Malcolm Mc...  \n",
-       "2  ['Teri Garr', 'Frederic Forrest', 'RaÃºl JuliÃ...  \n",
-       "3  ['Jon Foster', 'Peter Sarsgaard', 'Sienna Mill...  \n",
-       "4  ['Woody Harrelson', 'Liam Hemsworth', 'Alice B...  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>IMDB Score</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>Genre</th>\n",
-       "      <th>actors</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>director</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>companies</th>\n",
-       "      <th>top_actors</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.6</td>\n",
-       "      <td>It's Christmas time and the Griswolds are prep...</td>\n",
-       "      <td>Comedy</td>\n",
-       "      <td>Chevy Chase|Beverly D'Angelo|Randy Quaid|Julie...</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>Jeremiah S. Chechik</td>\n",
-       "      <td>27000000</td>\n",
-       "      <td>Hughes Entertainment|Warner Bros.</td>\n",
-       "      <td>['Chevy Chase', \"Beverly D'Angelo\", 'Randy Qua...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5.8</td>\n",
-       "      <td>By day, Richard Haig is a successful and well-...</td>\n",
-       "      <td>Comedy|Romance</td>\n",
-       "      <td>Jessica Alba|Pierce Brosnan|Malcolm McDowell|S...</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>Tom Vaughan</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Irish Dreamtime|Das Films</td>\n",
-       "      <td>['Jessica Alba', 'Pierce Brosnan', 'Malcolm Mc...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6.5</td>\n",
-       "      <td>Hank and Frannie don't seem to be able to live...</td>\n",
-       "      <td>Drama|Musical|Romance</td>\n",
-       "      <td>Teri Garr|Frederic Forrest|RaÃºl JuliÃ¡|Lainie...</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>Francis Ford Coppola</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Zoetrope Studios</td>\n",
-       "      <td>['Teri Garr', 'Frederic Forrest', 'RaÃºl JuliÃ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5.4</td>\n",
-       "      <td>Based on Michael Chabon's novel, the film chro...</td>\n",
-       "      <td>Adventure|Comedy|Drama</td>\n",
-       "      <td>Jon Foster|Peter Sarsgaard|Sienna Miller|Nick ...</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>Rawson Marshall Thurber</td>\n",
-       "      <td>0</td>\n",
-       "      <td>Sherazade Film Development|Groundswell Product...</td>\n",
-       "      <td>['Jon Foster', 'Peter Sarsgaard', 'Sienna Mill...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5.7</td>\n",
-       "      <td>A Texas Ranger investigates a series of unexpl...</td>\n",
-       "      <td>Drama|Western</td>\n",
-       "      <td>Woody Harrelson|Liam Hemsworth|Alice Braga|Emo...</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>Kieran Darcy-Smith</td>\n",
-       "      <td>10000000</td>\n",
-       "      <td>26 Films|Mandeville Films</td>\n",
-       "      <td>['Woody Harrelson', 'Liam Hemsworth', 'Alice B...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 301
     }
    ],
    "metadata": {}
@@ -1048,22 +829,18 @@
     "genre_dictionary = create_dictionary(train_data['Genre'].astype(str).values, min_count=5)\n",
     "train_genre_matrix = transform_text(train_data['Genre'].astype(str).values, genre_dictionary)\n",
     "test_genre_matrix = transform_text(test_data['Genre'].astype(str).values, genre_dictionary)\n",
-    "# valid_genre_matrix = transform_text(valid_data['Genre'].astype(str).values, genre_dictionary)\n",
     "\n",
     "director_dictionary = create_dictionary(train_data['director'].astype(str).values, min_count=5)\n",
     "train_director_matrix = transform_text(train_data['director'].astype(str).values, director_dictionary)\n",
     "test_director_matrix = transform_text(test_data['director'].astype(str).values, director_dictionary)\n",
-    "# valid_director_matrix = transform_text(valid_data['director'].astype(str).values, director_dictionary)\n",
     "\n",
     "actors_dictionary = create_dictionary(train_data['actors'].astype(str).values, min_count = 5)\n",
     "train_actors_matrix = transform_text(train_data['actors'].astype(str).values, actors_dictionary)\n",
     "test_actors_matrix = transform_text(test_data['actors'].astype(str).values, actors_dictionary)\n",
-    "# valid_actors_matrix = transform_text(valid_data['actors'].astype(str).values, actors_dictionary)\n",
     "\n",
     "companies_dictionary = create_dictionary(train_data['companies'].astype(str).values, min_count=5)\n",
     "train_companies_matrix = transform_text(train_data['companies'].astype(str).values, companies_dictionary)\n",
-    "test_companies_matrix = transform_text(test_data['companies'].astype(str).values, companies_dictionary)\n",
-    "# valid_companies_matrix = transform_text(valid_data['companies'].astype(str).values, companies_dictionary)"
+    "test_companies_matrix = transform_text(test_data['companies'].astype(str).values, companies_dictionary)"
    ],
    "outputs": [],
    "metadata": {
@@ -1072,31 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# tokenizer = en_core_web_sm.load(disable=[\"tagger\", \"parser\",\"ner\"])\n",
-    "# overview_dictionary = create_dictionary(train_data['overview'], min_count = 20, tokenizer=tokenizer)\n",
-    "# print('Size of dictionary: ', len(overview_dictionary))\n",
-    "# train_overview_matrix = transform_text(train_data['overview'].astype(str).values, overview_dictionary)\n",
-    "# test_overview_matrix = transform_text(test_data['overview'].astype(str).values, overview_dictionary)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "# print(actors_dictionary)\n",
-    "# print(train_overview_matrix.shape)\n",
-    "# print(overview_dictionary)"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 303,
    "source": [
     "def get_words_nltk(message, tokenizer = None):\n",
     "    sentence = nltk.tokenize.sent_tokenize(message)\n",
@@ -1155,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 305,
    "source": [
     "print(train_overview_matrix2.shape)"
    ],
@@ -1164,7 +917,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "(3649, 389)\n"
+      "(3928, 429)\n"
      ]
     }
    ],
@@ -1172,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 306,
    "source": [
     "train_data = pd.concat([train_data, pd.DataFrame(train_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(train_director_matrix, columns = director_dictionary.keys()), \n",
@@ -1187,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 307,
    "source": [
     "train_data.shape"
    ],
@@ -1196,18 +949,18 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(3649, 1465)"
+       "(3928, 1959)"
       ]
      },
      "metadata": {},
-     "execution_count": 276
+     "execution_count": 307
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 308,
    "source": [
     "test_data = pd.concat([test_data,   pd.DataFrame(test_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(test_director_matrix, columns = director_dictionary.keys()), \n",
@@ -1223,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 309,
    "source": [
     "test_data.shape"
    ],
@@ -1232,18 +985,25 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(1565, 1465)"
+       "(1684, 1959)"
       ]
      },
      "metadata": {},
-     "execution_count": 278
+     "execution_count": 309
     }
    ],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Print columns to file"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 310,
    "source": [
     "import sys\n",
     "\n",
