--- a/src/regression.ipynb
+++ b/src/regression.ipynb
@@ -23,62 +23,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "source": [
     "train_data = pd.read_csv('../data/train_final.csv')\n",
     "train_data = train_data.drop(columns = ['Genre', 'actors', 'director', 'companies', 'overview'])\n",
-    "X_train = train_data.drop(columns=['IMDB Score'])\n",
-    "print(np.cov(train_data['IMDB Score']))"
+    "X_train = train_data.drop(columns=['IMDB Score'])"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1.3749116441929752\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "source": [
-    "# valid_data = pd.read_csv('../data/valid_final.csv')\n",
-    "# valid_data = valid_data.drop(columns = ['Genre', 'actors', 'director', 'companies', 'overview'])\n",
-    "# valid_X = valid_data.drop(columns=['IMDB Score'])\n",
-    "# print(np.cov(valid_data['IMDB Score']))"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1.3261752115079182\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "source": [
     "test_data = pd.read_csv('../data/test_final.csv')\n",
     "test_data = test_data.drop(columns = ['Genre', 'actors', 'director', 'companies', 'overview'])\n",
-    "X_test = test_data.drop(columns=['IMDB Score'])\n",
-    "print(np.cov(test_data['IMDB Score']))"
+    "X_test = test_data.drop(columns=['IMDB Score'])"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "1.3698599720979419\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -299,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "source": [
     "linearRegression = LinearRegression().fit(X_train, train_data['IMDB Score'])"
    ],
@@ -336,12 +298,10 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "source": [
-    "# y vrednost greske"
+    "We will run GridSearchCV to see what are the best params for this regression"
    ],
-   "outputs": [],
    "metadata": {}
   },
   {
@@ -414,10 +374,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "ridgeRegression = Ridge(alpha=10, normalize=True, random_state=0).fit(X_train, train_data['IMDB Score'])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "ridgeRegression = Ridge(alpha=10, normalize=True, random_state=0).fit(X_train, train_data['IMDB Score'])\n",
-    "\n",
     "print('Train R^2: ', ridgeRegression.score(X_train, train_data['IMDB Score']))\n",
     "print('Test R^2: ', ridgeRegression.score(X_test, test_data['IMDB Score']))\n",
     "\n",
@@ -440,6 +407,13 @@
       "Test MSE:  1.197038964388495\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We will run GridSearchCV to see what are the best params for this regression"
    ],
    "metadata": {}
   },
@@ -551,6 +525,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "We will run GridSearchCV to see what are the best params for this regression"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "source": [
@@ -658,6 +639,13 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "We will run GridSearchCV to see what are the best params for this regression"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "source": [
@@ -716,6 +704,13 @@
       "test MSE:  0.8220233645807881\n"
      ]
     }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Plotting feature importance"
    ],
    "metadata": {}
   },
