--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -54,9 +54,7 @@
     "print(movie_genre.shape)\n",
     "print(credits.shape)\n",
     "print(keywords.shape)\n",
-    "print(movies_metadata.shape)\n",
-    "\n",
-    "# movies_metadata.head()"
+    "print(movies_metadata.shape)"
    ],
    "outputs": [
     {
@@ -218,22 +216,12 @@
     "top_2_actors = prepared_data['cast'].apply(literal_eval).apply(get_actors)\n",
     "top_2_companies = prepared_data['production_companies'].apply(literal_eval).apply(get_production_companies)\n",
     "\n",
-    "# print(directors)\n",
-    "# print(top_2_actors)\n",
-    "# print(top_2_companies)\n",
     "prepared_data['director'] = directors\n",
     "prepared_data['actors'] = top_2_actors\n",
     "prepared_data['companies'] = top_2_companies\n",
     "prepared_data.to_csv('../data/preprocessed_data_3.csv', index=False)\n",
     "# prepared_data.head()"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   },
@@ -438,18 +426,14 @@
    "execution_count": 9,
    "source": [
     "train_dataset, test_dataset = train_test_split(data_to_use, test_size=0.3, random_state = 0)\n",
-    "# valid_dataset, test_dataset = train_test_split(test_dataset, test_size=0.5, random_state = 0)\n",
     "\n",
     "train_data = train_dataset.reset_index(drop=True)\n",
-    "# valid_data = valid_dataset.reset_index(drop=True)\n",
     "test_data = test_dataset.reset_index(drop=True)\n",
     "\n",
     "print(train_data.shape)\n",
-    "# print(valid_data.shape)\n",
     "print(test_data.shape)\n",
     "\n",
     "train_data.to_csv('../data/train.csv', index = False)\n",
-    "# valid_data.to_csv('../data/valid.csv', index = False)\n",
     "test_data.to_csv('../data/test.csv', index = False)"
    ],
    "outputs": [
@@ -467,7 +451,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now we can take this data and do binarization and then we will apply regression algorithms"
+    "Now we can take this data, do binarization and then we will apply regression algorithms"
    ],
    "metadata": {}
   },
@@ -481,34 +465,36 @@
     "genre_dictionary = create_dictionary(train_data['Genre'].astype(str).values, min_count=5)\n",
     "train_genre_matrix = transform_text(train_data['Genre'].astype(str).values, genre_dictionary)\n",
     "test_genre_matrix = transform_text(test_data['Genre'].astype(str).values, genre_dictionary)\n",
-    "# valid_genre_matrix = transform_text(valid_data['Genre'].astype(str).values, genre_dictionary)\n",
     "\n",
     "director_dictionary = create_dictionary(train_data['director'].astype(str).values, min_count=5)\n",
     "train_director_matrix = transform_text(train_data['director'].astype(str).values, director_dictionary)\n",
     "test_director_matrix = transform_text(test_data['director'].astype(str).values, director_dictionary)\n",
-    "# valid_director_matrix = transform_text(valid_data['director'].astype(str).values, director_dictionary)\n",
     "\n",
     "actors_dictionary = create_dictionary(train_data['actors'].astype(str).values, min_count = 5)\n",
     "train_actors_matrix = transform_text(train_data['actors'].astype(str).values, actors_dictionary)\n",
     "test_actors_matrix = transform_text(test_data['actors'].astype(str).values, actors_dictionary)\n",
-    "# valid_actors_matrix = transform_text(valid_data['actors'].astype(str).values, actors_dictionary)\n",
     "\n",
     "companies_dictionary = create_dictionary(train_data['companies'].astype(str).values, min_count=5)\n",
     "train_companies_matrix = transform_text(train_data['companies'].astype(str).values, companies_dictionary)\n",
-    "test_companies_matrix = transform_text(test_data['companies'].astype(str).values, companies_dictionary)\n",
-    "# valid_companies_matrix = transform_text(valid_data['companies'].astype(str).values, companies_dictionary)\n",
-    "\n",
-    "tokenizer = en_core_web_sm.load(disable=[\"tagger\", \"parser\",\"ner\"])\n",
-    "overview_dictionary = create_dictionary(train_data['overview'], min_count = 20, tokenizer=tokenizer)\n",
-    "print('Size of dictionary: ', len(overview_dictionary))\n",
-    "train_overview_matrix = transform_text(train_data['overview'].astype(str).values, overview_dictionary)\n",
-    "test_overview_matrix = transform_text(test_data['overview'].astype(str).values, overview_dictionary)\n",
-    "# valid_overview_matrix = transform_text(valid_data['overview'].astype(str).values, overview_dictionary)"
+    "test_companies_matrix = transform_text(test_data['companies'].astype(str).values, companies_dictionary)"
    ],
    "outputs": [],
    "metadata": {
     "tags": []
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "tokenizer = en_core_web_sm.load(disable=[\"tagger\", \"parser\",\"ner\"])\n",
+    "overview_dictionary = create_dictionary(train_data['overview'], min_count = 20, tokenizer=tokenizer)\n",
+    "print('Size of dictionary: ', len(overview_dictionary))\n",
+    "train_overview_matrix = transform_text(train_data['overview'].astype(str).values, overview_dictionary)\n",
+    "test_overview_matrix = transform_text(test_data['overview'].astype(str).values, overview_dictionary)"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -530,22 +516,6 @@
    "cell_type": "code",
    "execution_count": 16,
    "source": [
-    "# valid_data = pd.concat([valid_data, pd.DataFrame(valid_genre_matrix, columns = genre_dictionary.keys()), \n",
-    "#                                     pd.DataFrame(valid_director_matrix, columns=director_dictionary.keys()), \n",
-    "#                                     pd.DataFrame(valid_actors_matrix, columns = actors_dictionary.keys()),\n",
-    "#                                     pd.DataFrame(valid_companies_matrix, columns = companies_dictionary.keys()),\n",
-    "#                                     pd.DataFrame(valid_overview_matrix, columns = overview_dictionary.keys())], axis=1)\n",
-    "\n",
-    "# valid_data.to_csv('../data/valid_final.csv', index = False)\n",
-    "# # valid_data.head()"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "source": [
     "test_data = pd.concat([test_data,   pd.DataFrame(test_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(test_director_matrix, columns=director_dictionary.keys()), \n",
     "                                    pd.DataFrame(test_actors_matrix, columns = actors_dictionary.keys()),\n",
@@ -559,20 +529,27 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Print columns to file"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "source": [
-    "# import sys\n",
+    "import sys\n",
     "\n",
-    "# orig_stdout = sys.stdout\n",
-    "# f = open('columns.txt', 'w')\n",
-    "# sys.stdout = f\n",
+    "orig_stdout = sys.stdout\n",
+    "f = open('columns.txt', 'w')\n",
+    "sys.stdout = f\n",
     "\n",
-    "# for col in train_data.columns:\n",
-    "#     print(col)\n",
+    "for col in train_data.columns:\n",
+    "    print(col)\n",
     "\n",
-    "# sys.stdout = orig_stdout\n",
-    "# f.close()\n"
+    "sys.stdout = orig_stdout\n",
+    "f.close()\n"
    ],
    "outputs": [],
    "metadata": {}
