Renamed .ipynb files

--- a/src/01_preprocessing.ipynb
+++ b/src/01_preprocessing.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -51,31 +51,12 @@
     "movies_metadata = pd.read_csv('../data/movies/movies_metadata.csv', encoding=\"latin1\")\n",
     "\n",
     "\n",
-    "print(movie_genre.shape)\n",
-    "print(credits.shape)\n",
-    "print(keywords.shape)\n",
-    "print(movies_metadata.shape)"
+    "# print(movie_genre.shape)\n",
+    "# print(credits.shape)\n",
+    "# print(keywords.shape)\n",
+    "# print(movies_metadata.shape)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "(40108, 6)\n",
-      "(45476, 3)\n",
-      "(46419, 2)\n",
-      "(45466, 24)\n"
-     ]
-    },
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "/home/shone/anaconda3/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3437: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
@@ -130,7 +111,6 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "# prepared_data = all_tables_merged.copy()\n",
     "prepared_data = pd.read_csv('../data/preprocessed_data.csv');\n",
     "prepared_data.drop('belongs_to_collection', 1, inplace=True)\n",
     "prepared_data.drop('homepage', 1, inplace=True)\n",
@@ -551,13 +531,6 @@
     "sys.stdout = orig_stdout\n",
     "f.close()\n"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
