--- a/src/03_regression.ipynb
+++ b/src/03_regression.ipynb
@@ -45,211 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "source": [
-    "X_train.head()"
+    "# X_train.head()"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "   runtime    budget  horror  comedy  family  fantasy  adventure  drama  \\\n",
-       "0     52.0         0     1.0     0.0     0.0      0.0        0.0    0.0   \n",
-       "1    100.0         0     0.0     1.0     1.0      1.0        0.0    0.0   \n",
-       "2    125.0  15000000     0.0     0.0     0.0      0.0        1.0    1.0   \n",
-       "3     91.0         0     0.0     1.0     0.0      0.0        0.0    0.0   \n",
-       "4     83.0         0     0.0     0.0     0.0      0.0        0.0    1.0   \n",
-       "\n",
-       "   history  romance  ...  Gary  possibly  guilt  minister  Lou  niece  \\\n",
-       "0      0.0      0.0  ...   0.0       0.0    0.0       0.0  0.0    0.0   \n",
-       "1      0.0      0.0  ...   0.0       0.0    0.0       0.0  0.0    0.0   \n",
-       "2      1.0      0.0  ...   0.0       0.0    0.0       0.0  0.0    0.0   \n",
-       "3      0.0      0.0  ...   0.0       0.0    0.0       0.0  0.0    0.0   \n",
-       "4      0.0      0.0  ...   0.0       0.0    0.0       0.0  0.0    0.0   \n",
-       "\n",
-       "   respect  Western  spree  creator  \n",
-       "0      0.0      0.0    0.0      0.0  \n",
-       "1      0.0      0.0    0.0      0.0  \n",
-       "2      0.0      0.0    0.0      0.0  \n",
-       "3      0.0      0.0    0.0      0.0  \n",
-       "4      0.0      0.0    0.0      0.0  \n",
-       "\n",
-       "[5 rows x 4993 columns]"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>horror</th>\n",
-       "      <th>comedy</th>\n",
-       "      <th>family</th>\n",
-       "      <th>fantasy</th>\n",
-       "      <th>adventure</th>\n",
-       "      <th>drama</th>\n",
-       "      <th>history</th>\n",
-       "      <th>romance</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Gary</th>\n",
-       "      <th>possibly</th>\n",
-       "      <th>guilt</th>\n",
-       "      <th>minister</th>\n",
-       "      <th>Lou</th>\n",
-       "      <th>niece</th>\n",
-       "      <th>respect</th>\n",
-       "      <th>Western</th>\n",
-       "      <th>spree</th>\n",
-       "      <th>creator</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>52.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>100.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>125.0</td>\n",
-       "      <td>15000000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>91.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>83.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 4993 columns</p>\n",
-       "</div>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
