Added preprocessed data

--- a/src/04_preprocessing2.ipynb
+++ b/src/04_preprocessing2.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 3,
    "source": [
     "# we need to rename column imdbId so it matches column name from movies_metadata.csv, for later join\n",
     "cleaned_movie_genre = movie_genre.rename(columns={'imdbId': 'imdb_id'})\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 5,
    "source": [
     "prepared_data = prepared_data[prepared_data.original_language == 'en']\n",
     "pd.to_datetime(prepared_data.release_date)\n",
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 6,
    "source": [
     "def get_director(crew):\n",
     "    for director in crew:\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 7,
    "source": [
     "prepared_data.dropna(subset=['production_companies'], inplace=True)\n",
     "directors = prepared_data['crew'].apply(literal_eval).apply(get_director)\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 8,
    "source": [
     "actors_flat_list = [item for sublist in prepared_data['top_actors'] for item in sublist]"
    ],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 9,
    "source": [
     "main_actors = [x for x in actors_flat_list]\n",
     "main_actors_dict = dict(Counter(main_actors))\n",
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 10,
    "source": [
     "included_columns = ['IMDB Score', 'overview', 'Genre', 'actors', 'runtime', 'director', 'budget', 'companies', 'top_actors']\n",
     "preprocessed_data2_3 = pd.read_csv('../data/preprocessed_data2_3.csv')\n",
@@ -694,14 +694,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 293
+     "execution_count": 10
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 11,
    "source": [
     "def check_if_contains(s):\n",
     "    list_of_actors = [x.strip('[]').split(',')[0] for x in s]\n",
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "keep_actors = data_to_use['top_actors'].apply(literal_eval).apply(check_if_contains)\n",
     "data_to_use['keep_actors'] = keep_actors\n",
@@ -728,12 +728,23 @@
     "data_to_use.shape\n",
     "# data_to_use.head()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(5612, 9)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 13,
    "source": [
     "def get_words(message, tokenizer = None):\n",
     "    if tokenizer:\n",
@@ -787,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 14,
    "source": [
     "train_dataset, test_dataset = train_test_split(data_to_use, test_size=0.3, random_state = 0)\n",
     "\n",
@@ -821,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 15,
    "source": [
     "train_data = pd.read_csv('../data/train2.csv')\n",
     "test_data = pd.read_csv('../data/test2.csv')\n",
@@ -849,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 16,
    "source": [
     "def get_words_nltk(message, tokenizer = None):\n",
     "    sentence = nltk.tokenize.sent_tokenize(message)\n",
@@ -896,10 +907,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
     "overview_dictionary2 = create_dictionary_nltk(train_data['overview'], min_count = 20)\n",
-    "print(overview_dictionary2)\n",
+    "# print(overview_dictionary2)\n",
     "train_overview_matrix2 = transform_text_nltk(train_data['overview'].astype(str).values, overview_dictionary2)\n",
     "test_overview_matrix2 = transform_text_nltk(test_data['overview'].astype(str).values, overview_dictionary2)"
    ],
@@ -908,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 19,
    "source": [
     "print(train_overview_matrix2.shape)"
    ],
@@ -925,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 20,
    "source": [
     "train_data = pd.concat([train_data, pd.DataFrame(train_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(train_director_matrix, columns = director_dictionary.keys()), \n",
@@ -940,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 21,
    "source": [
     "train_data.shape"
    ],
@@ -953,14 +964,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 307
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 22,
    "source": [
     "test_data = pd.concat([test_data,   pd.DataFrame(test_genre_matrix, columns = genre_dictionary.keys()), \n",
     "                                    pd.DataFrame(test_director_matrix, columns = director_dictionary.keys()), \n",
@@ -976,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 23,
    "source": [
     "test_data.shape"
    ],
@@ -989,7 +1000,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 309
+     "execution_count": 23
     }
    ],
    "metadata": {}
@@ -1003,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 24,
    "source": [
     "import sys\n",
     "\n",
@@ -1017,13 +1028,6 @@
     "sys.stdout = orig_stdout\n",
     "f.close()\n"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [],
    "outputs": [],
    "metadata": {}
   }
